# tizonia-openmax-il

./: .clang-format  .dir-locals.el  .github_changelog_generator  .gitignore  .hgignore  .travis.yml  BUILDING.md  BUILDING_with_meson  BUILDING_with_meson.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING-agents.md  CONTRIBUTING.md  COPYING.LESSER.md  ISSUE_TEMPLATE.md  Makefile.am  PROJECT.md  README.md  ROADMAP.md  configure.ac  description-pak  meson.build  meson_options.txt
cast/libtizcastclient/: Makefile.am  configure.ac  libtizcastclient.pc.in  meson.build
cast/tizcastd/: .clang-format  Makefile.am  configure.ac  meson.build  tizcastd.pc.in
clients/: Makefile.am  configure.ac  meson.build  meson_post_install.py
clients/chromecast/: Makefile.am  configure.ac  meson.build
clients/deezer/: Makefile.am  configure.ac
clients/dirble/: Makefile.am  configure.ac
clients/gmusic/: Makefile.am  configure.ac  meson.build
clients/iheart/: Makefile.am  configure.ac  meson.build
clients/pandora/: Makefile.am  configure.ac
clients/plex/: Makefile.am  configure.ac  meson.build
clients/soundcloud/: Makefile.am  configure.ac  meson.build
clients/spotify/: Makefile.am  configure.ac  meson.build
clients/tunein/: Makefile.am  configure.ac  meson.build
clients/youtube/: Makefile.am  configure.ac  meson.build
config/: Makefile.am  configure.ac  log4crc.in  tizonia.conf.in
config/debian/: changelog  control  copyright  tizonia-config.dirs  tizonia-config.install
config/src/: Makefile.am  log4crc.in  meson.build  tizonia.conf.in  tizonia.conf.test.in
docs/: Doxyfile.in  Makefile.am  Makefile.in  README.txt  aclocal.m4  configure  configure.ac  meson.build
docs/design/: libspotify-removal-packaging-strategy.md  v1-core-ci-scope.md  youtube-yt-dlp-integration.md
docs/doxygen-src/: Makefile.am  Makefile.in  castmanagement.dox  customdoxygen.css  doxy-boot.js  doxyfile.in  doxyfile.rtd  footer.html  header.html  mainpage.dox  meson.build  plugins.dox  resourcemanagement.dox
docs/e2e/: branch-protection-human-fallback.md  ci-signal-grace-window-rerun.md  ci-signal-grace-window.md  retry-budget-exhaustion.md  retry-budget-scope.md
docs/sphinx-src/: Makefile  conf.py  index.rst  meson.build  requirements.txt
docs/userman/: conf.py  index.rst
include/: Makefile.am  configure.ac  libkhromxil112.pc.in  libkhromxil12.pc.in  meson.build  tizilheaders.pc.in  tizonia-khronos-openmaxil12.pc.in  tizonia-openmax-il-headers.pc.in
include/debian/: changelog  control  copyright
include/omxil-1.1.2/: Makefile.am  OMX_ContentPipe.h  OMX_Core.h
include/omxil-1.2/: Makefile.am  OMX_Audio.h  OMX_Component.h  OMX_Core.h  OMX_IVCommon.h  OMX_Image.h  OMX_Index.h  OMX_Other.h  OMX_RoleNames.h  OMX_TizoniaExt.h  OMX_Types.h  OMX_Video.h  meson.build  tizext.h
libtizcore/: Makefile.am  configure.ac  libtizcore.pc.in  meson.build
libtizcore/debian/: changelog  control  copyright  libtizcore-dev.install  rules
libtizcore/src/: Makefile.am  meson.build  tizcore.c  tizcore.h
libtizcore/test_component/: Makefile.am  meson.build  tizcoretc.c
libtizcore/tests/: Makefile.am  check_tizcore.c  meson.build  tizonia.conf.in
libtizgmusic/: Makefile.am  configure.ac
libtizgmusic/debian/: libtizgmusic-dev.install
libtizgmusic/src/: Makefile.am  tizgmusic.cpp  tizgmusic.hpp  tizgmusic_c.cpp  tizgmusic_c.h  tizgmusicproxy.py
libtizgmusic/tests/: check_tizgmusic.c
libtizonia/: Makefile.am  configure.ac  libtizonia.pc.in  meson.build
libtizonia/debian/: changelog  control  copyright  rules
libtizonia/src/: Makefile.am  meson.build  tizaacport.c  tizaacport.h  tizaacport_decls.h  tizapi.c  tizapi.h  tizapi_decls.h  tizaudioport.c  tizaudioport.h  tizaudioport_decls.h  tizavcport.c  tizavcport.h  tizavcport_decls.h  tizbinaryport.c  tizbinaryport.h  tizbinaryport_decls.h  tizconfigport.c  tizconfigport.h  tizconfigport_decls.h  tizdemuxercfgport.c  tizdemuxercfgport.h  tizdemuxercfgport_decls.h  tizdemuxerport.c  tizdemuxerport.h  tizdemuxerport_decls.h  tizexecuting.c  tizexecuting.h  tizexecutingtoidle.c  tizexecutingtoidle.h  tizfilterprc.c  tizfilterprc.h  tizfilterprc_decls.h  tizflacport.c  tizflacport.h  tizflacport_decls.h  tizfsm.c  tizfsm.h  tizfsm_decls.h  tizidle.c  (+92 more)
libtizonia/test_component/: Makefile.am  meson.build  tiztc.c  tiztcproc.c  tiztcproc.h  tiztcproc_decls.h
libtizonia/tests/: Makefile.am  check_tizonia.c  check_tizonia.h.in  meson.build
libtizosal/: Makefile.am  configure.ac  libtizosal.pc.in
libtizosal/src/: Makefile.am  log4crc  tizmacros.h  tizosal.c  tizosal.h  tizosalev.c  tizosalev.h  tizosalhttp.c  tizosalhttp.h  tizosalint.h  tizosallimits.c  tizosallimits.h  tizosallog.c  tizosallog.h  tizosalmap.c  tizosalmap.h  tizosalmem.c  tizosalmem.h  tizosalpqueue.c  tizosalpqueue.h  tizosalqueue.c  tizosalqueue.h  tizosalrc.c  tizosalrc.h  tizosalsoa.c  tizosalsoa.h  tizosalsync.c  tizosalsync.h  tizosalthread.c  tizosalthread.h  tizosalutils.c  tizosalutils.h  tizosaluuid.c  tizosaluuid.h  tizosalvector.c  tizosalvector.h  tizrc
libtizosal/tests/: Makefile.am  check_event.c  check_http_parser.c  check_map.c  check_mem.c  check_mutex.c  check_pqueue.c  check_queue.c  check_rc.c  check_sem.c  check_soa.c  check_tizosal.c  check_vector.c
libtizplatform/: Makefile.am  configure.ac  libtizplatform.pc.in  meson.build
libtizplatform/debian/: changelog  control  copyright  libtizplatform0.install  rules  tizplatform-dev.dirs  tizplatform-dev.install  tizplatform1.dirs  tizplatform1.install
libtizplatform/src/: Makefile.am  meson.build  tizatomic.c  tizatomic.h  tizbuffer.c  tizbuffer.h  tizev.c  tizev.h  tizhttp.c  tizhttp.h  tizlimits.c  tizlimits.h  tizlog.c  tizlog.h  tizmacros.h  tizmap.c  tizmap.h  tizmem.c  tizmem.h  tizomxutils.c  tizomxutils.h  tizplatform.c  tizplatform.h  tizplatform_config.h.in  tizplatform_internal.h  (+24 more)
player/: .clang-format  Makefile.am  configure.ac  meson.build
plugins/: Makefile.am  configure.ac  meson.build
rm/: Makefile.am  configure.ac  meson.build
tizonia/: .clang-format  Makefile.am  configure.ac
(+1930 files in other folders)
